[tool.poetry]
name = "everycheese"
version = "0.1.0"
description = ""
authors = ["Deschant Kounou <kounoudeschant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
